// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`rendered layer (golden) shared platform default 1`] = `
"# syntax=docker/dockerfile:1.7
# Kortix platform default sandbox base.
# Sessions clone the project workspace at boot — nothing project-specific
# is baked in here. Customize via \`sandbox.templates\` in kortix.yaml.
FROM ubuntu:24.04

WORKDIR /workspace

# ─── Kortix runtime layer (auto-injected) ──────────────────────────
# Everything below is added by the Kortix snapshot builder. Do not
# edit by hand — your project Dockerfile above is preserved verbatim.

USER root
ENV DEBIAN_FRONTEND=noninteractive
RUN base_py="$(command -v python3 || true)" \\
    && apt-get update \\
    && apt-get install -y --no-install-recommends \\
        ca-certificates curl git gzip nodejs npm unzip tmux iproute2 iputils-arping \\
        build-essential ffmpeg fonts-dejavu fonts-liberation fonts-noto fonts-noto-cjk \\
        latexmk libreoffice pandoc pkg-config poppler-utils qpdf tesseract-ocr \\
        python3 python3-dev python3-pip python3-venv \\
        texlive-bibtex-extra texlive-fonts-recommended texlive-latex-base \\
        texlive-latex-extra texlive-latex-recommended \\
    && rm -rf /var/lib/apt/lists/* \\
    && "\${base_py:-python3}" -m venv --system-site-packages /opt/kortix/pyfloor \\
    && /opt/kortix/pyfloor/bin/python -c 'import sys; print("pyfloor interpreter:", sys.version)'

ENV PATH=/opt/kortix/pyfloor/bin:$PATH

# Starter skill Python package floor (document/data/PDF/presentation helpers).
# Installed INTO the venv via its own pip, which cannot touch a dpkg-owned
# package no matter what the resolver picks.
RUN /opt/kortix/pyfloor/bin/pip install --no-cache-dir \\
        "beautifulsoup4>=4.12" \\
        "lxml>=5" \\
        "markdownify>=0.13" \\
        "markitdown[pptx]>=0.1.0" \\
        "matplotlib>=3.8" \\
        "numpy>=1.26" \\
        "openpyxl>=3.1" \\
        "pandas>=2.2" \\
        "pdf2docx>=0.5" \\
        "pdf2image>=1.17" \\
        "pdfplumber>=0.11" \\
        "pillow>=10" \\
        "playwright>=1.58" \\
        "plotly>=5.22" \\
        "pymupdf>=1.24" \\
        "pypdf>=4" \\
        "pypdfium2>=4.30" \\
        "pytesseract>=0.3" \\
        "python-docx>=1.1" \\
        "python-pptx>=1.0" \\
        "reportlab>=4.2" \\
        "requests>=2.32" \\
        "scikit-learn>=1.4" \\
        "scipy>=1.12" \\
        "seaborn>=0.13" \\
        "youtube-transcript-api>=0.6" \\
    && /opt/kortix/pyfloor/bin/python -c 'import importlib; [importlib.import_module(m) for m in ["bs4", "lxml", "markitdown", "matplotlib", "numpy", "openpyxl", "pandas", "pdf2docx", "pdf2image", "pdfplumber", "PIL", "playwright", "plotly", "fitz", "pypdf", "pypdfium2", "pytesseract", "docx", "pptx", "reportlab", "requests", "sklearn", "scipy", "seaborn", "youtube_transcript_api"]]; print("starter Python package floor OK")'

ENV PLAYWRIGHT_BROWSERS_PATH=/opt/pw-browsers \\
    AGENT_BROWSER_EXECUTABLE_PATH=/usr/local/bin/chromium \\
    AGENT_BROWSER_ARGS=--no-sandbox,--disable-dev-shm-usage \\
    PLAYWRIGHT_DOWNLOAD_CONNECTION_TIMEOUT=1800000
RUN npm install -g --no-audit --no-fund "agent-browser@0.27.0" \\
    && agent-browser --version \\
    && for pw_try in 1 2 3 4 5; do \\
        HOME=/opt/kortix/home npx -y playwright@1.60.0 install --with-deps chromium && break; \\
        echo "playwright chromium install attempt $pw_try failed, retrying..."; \\
        sleep $((pw_try*10)); \\
    done \\
    && rm -rf /var/lib/apt/lists/* \\
    && pw_chrome="$(find /opt/pw-browsers -type f -path '*chrome-linux*/chrome' | head -n1)" \\
    && test -n "$pw_chrome" \\
    && ln -sf "$pw_chrome" /usr/local/bin/chromium \\
    && mkdir -p /opt/kortix/home/.agent-browser/browsers \\
    && ln -sf "$(dirname "$pw_chrome")" /opt/kortix/home/.agent-browser/browsers/chrome-linux64 \\
    && /usr/local/bin/chromium --version \\
    && env -u AGENT_BROWSER_EXECUTABLE_PATH HOME=/opt/kortix/home agent-browser doctor 2>&1 | grep -qE 'pass.+chrome-linux64/chrome'

RUN npm install -g --no-audit --no-fund "opencode-ai@1.17.11" \\
    && command -v opencode \\
    && opencode --version

RUN set +e; \\
    export HOME=/opt/kortix/home \\
        XDG_DATA_HOME=/opt/kortix/home/.local/share \\
        XDG_CONFIG_HOME=/opt/kortix/home/.config \\
        XDG_CACHE_HOME=/opt/kortix/home/.cache; \\
    mkdir -p "$XDG_DATA_HOME" "$XDG_CONFIG_HOME" "$XDG_CACHE_HOME"; \\
    opencode serve --port 4096 --hostname 127.0.0.1 >/tmp/oc-bake.log 2>&1 & oc_pid=$!; \\
    for i in $(seq 1 180); do \\
        curl -s -o /dev/null -m 2 http://127.0.0.1:4096/ && break; \\
        kill -0 "$oc_pid" 2>/dev/null || break; \\
        sleep 1; \\
    done; \\
    sleep 3; \\
    kill "$oc_pid" 2>/dev/null; wait "$oc_pid" 2>/dev/null; \\
    echo "=== migration-bake: opencode data dir ==="; ls -laR "$XDG_DATA_HOME/opencode" 2>/dev/null | head -40; \\
    echo "=== migration-bake: opencode log tail ==="; tail -25 /tmp/oc-bake.log; \\
    rm -f /tmp/oc-bake.log; true

RUN curl -fsSL https://bun.com/install | bash \\
    && install -m 755 /root/.bun/bin/bun /usr/local/bin/bun \\
    && bun --version

RUN mkdir -p /opt/kortix/home/.bun/install/cache /opt/kortix/opencode-config-deps \\
    && cd /opt/kortix/opencode-config-deps \\
    && printf '{"name":"kortix-opencode-config","private":true,"dependencies":{"@mendable/firecrawl-js":"^4.25.1","@opencode-ai/plugin":"1.17.11","@tavily/core":"^0.7.3","replicate":"^1.4.0"},"overrides":{"axios":"1.16.0","form-data":"4.0.6"}}' > package.json \\
    && HOME=/opt/kortix/home BUN_INSTALL_CACHE_DIR=/opt/kortix/home/.bun/install/cache bun install

RUN cd /opt/kortix/opencode-config-deps \\
    && HOME=/opt/kortix/home bun build node_modules/axios/lib/utils.js node_modules/form-data/lib/form_data.js --target=bun --outdir=/tmp/opencode-deps-bundle-check \\
    && rm -rf /tmp/opencode-deps-bundle-check \\
    && echo "opencode-config-deps: baked tree bundles cleanly"

COPY kortix-opencode-config/ /opt/kortix/warm-config/.kortix/opencode/
RUN cd /opt/kortix/warm-config/.kortix/opencode \\
    && rm -rf node_modules \\
    && ln -s /opt/kortix/opencode-config-deps/node_modules node_modules \\
    && HOME=/opt/kortix/home bun build tools/*.ts --target=bun --outdir=/tmp/opencode-tools-bundle-check \\
    && rm -rf /tmp/opencode-tools-bundle-check \\
    && echo "opencode-config-deps: starter tool files bundle cleanly"

RUN set +e; \\
    export HOME=/opt/kortix/home \\
        XDG_DATA_HOME=/opt/kortix/home/.local/share \\
        XDG_CONFIG_HOME=/opt/kortix/home/.config \\
        XDG_CACHE_HOME=/opt/kortix/home/.cache \\
        BUN_INSTALL_CACHE_DIR=/opt/kortix/home/.bun/install/cache; \\
    mkdir -p /workspace/.kortix; \\
    staged_starter_config=0; \\
    [ -d /workspace/.kortix/opencode ] || { cp -a /opt/kortix/warm-config/.kortix/opencode /workspace/.kortix/opencode && staged_starter_config=1; }; \\
    rm -rf /workspace/.kortix/opencode/node_modules; \\
    ln -s /opt/kortix/opencode-config-deps/node_modules /workspace/.kortix/opencode/node_modules; \\
    export OPENCODE_CONFIG_DIR=/workspace/.kortix/opencode; \\
    cd /workspace; \\
    opencode serve --port 4096 --hostname 127.0.0.1 >/tmp/oc-warm.log 2>&1 & oc_pid=$!; \\
    ready=0; \\
    for i in $(seq 1 300); do \\
        code=$(curl -s -o /dev/null -w '%{http_code}' -m 3 "http://127.0.0.1:4096/session?directory=/workspace" 2>/dev/null); \\
        case "$code" in 200|204|301|302) ready=1; break;; esac; \\
        kill -0 "$oc_pid" 2>/dev/null || break; \\
        sleep 1; \\
    done; \\
    echo "=== instance-warm: ready=$ready ==="; \\
    kill "$oc_pid" 2>/dev/null; wait "$oc_pid" 2>/dev/null; \\
    find /workspace -mindepth 1 -delete 2>/dev/null; \\
    rm -rf /opt/kortix/warm-config; \\
    echo "=== instance-warm: opencode log tail ==="; tail -20 /tmp/oc-warm.log; \\
    rm -f /tmp/oc-warm.log; true

COPY kortix-agent.gz /tmp/kortix-agent.gz
COPY kortix.gz /tmp/kortix.gz
COPY kortix-entrypoint /usr/local/bin/kortix-entrypoint
COPY kortix-slack-cli/ /opt/kortix/apps/sandbox/slack-cli/
COPY kortix-executor-sdk/ /opt/kortix/packages/executor-sdk/
COPY kortix-llm-catalog.json /opt/kortix/llm-catalog.json
COPY scaffold.git /opt/kortix/scaffold.git
RUN gunzip -c /tmp/kortix-agent.gz > /usr/local/bin/kortix-agent \\
    && gunzip -c /tmp/kortix.gz > /usr/local/bin/kortix \\
    && rm /tmp/kortix-agent.gz /tmp/kortix.gz \\
    && chmod +x /usr/local/bin/kortix-agent /usr/local/bin/kortix /usr/local/bin/kortix-entrypoint \\
        /opt/kortix/apps/sandbox/slack-cli/install-shims.sh \\
    && bash /opt/kortix/apps/sandbox/slack-cli/install-shims.sh /opt/kortix/apps/sandbox/slack-cli \\
    && kortix --version

ENV KORTIX_WORKSPACE=/workspace
RUN mkdir -p /workspace /opt/kortix/home /ephemeral/kortix-master/opencode
WORKDIR /workspace
EXPOSE 8000
ENTRYPOINT ["/usr/local/bin/kortix-entrypoint"]
"
`;

exports[`rendered layer (golden) custom template (user seeds /workspace) 1`] = `
"FROM ubuntu:24.04

RUN apt-get update && apt-get install -y --no-install-recommends gdal-bin

WORKDIR /workspace
RUN mkdir -p /workspace/data && echo seed > /workspace/data/basemap.tif

# ─── Kortix runtime layer (auto-injected) ──────────────────────────
# Everything below is added by the Kortix snapshot builder. Do not
# edit by hand — your project Dockerfile above is preserved verbatim.

USER root
ENV DEBIAN_FRONTEND=noninteractive
RUN base_py="$(command -v python3 || true)" \\
    && apt-get update \\
    && apt-get install -y --no-install-recommends \\
        ca-certificates curl git gzip nodejs npm unzip tmux iproute2 iputils-arping \\
        build-essential ffmpeg fonts-dejavu fonts-liberation fonts-noto fonts-noto-cjk \\
        latexmk libreoffice pandoc pkg-config poppler-utils qpdf tesseract-ocr \\
        python3 python3-dev python3-pip python3-venv \\
        texlive-bibtex-extra texlive-fonts-recommended texlive-latex-base \\
        texlive-latex-extra texlive-latex-recommended \\
    && rm -rf /var/lib/apt/lists/* \\
    && "\${base_py:-python3}" -m venv --system-site-packages /opt/kortix/pyfloor \\
    && /opt/kortix/pyfloor/bin/python -c 'import sys; print("pyfloor interpreter:", sys.version)'

ENV PATH=/opt/kortix/pyfloor/bin:$PATH

# Starter skill Python package floor (document/data/PDF/presentation helpers).
# Installed INTO the venv via its own pip, which cannot touch a dpkg-owned
# package no matter what the resolver picks.
RUN /opt/kortix/pyfloor/bin/pip install --no-cache-dir \\
        "beautifulsoup4>=4.12" \\
        "lxml>=5" \\
        "markdownify>=0.13" \\
        "markitdown[pptx]>=0.1.0" \\
        "matplotlib>=3.8" \\
        "numpy>=1.26" \\
        "openpyxl>=3.1" \\
        "pandas>=2.2" \\
        "pdf2docx>=0.5" \\
        "pdf2image>=1.17" \\
        "pdfplumber>=0.11" \\
        "pillow>=10" \\
        "playwright>=1.58" \\
        "plotly>=5.22" \\
        "pymupdf>=1.24" \\
        "pypdf>=4" \\
        "pypdfium2>=4.30" \\
        "pytesseract>=0.3" \\
        "python-docx>=1.1" \\
        "python-pptx>=1.0" \\
        "reportlab>=4.2" \\
        "requests>=2.32" \\
        "scikit-learn>=1.4" \\
        "scipy>=1.12" \\
        "seaborn>=0.13" \\
        "youtube-transcript-api>=0.6" \\
    && /opt/kortix/pyfloor/bin/python -c 'import importlib; [importlib.import_module(m) for m in ["bs4", "lxml", "markitdown", "matplotlib", "numpy", "openpyxl", "pandas", "pdf2docx", "pdf2image", "pdfplumber", "PIL", "playwright", "plotly", "fitz", "pypdf", "pypdfium2", "pytesseract", "docx", "pptx", "reportlab", "requests", "sklearn", "scipy", "seaborn", "youtube_transcript_api"]]; print("starter Python package floor OK")'

ENV PLAYWRIGHT_BROWSERS_PATH=/opt/pw-browsers \\
    AGENT_BROWSER_EXECUTABLE_PATH=/usr/local/bin/chromium \\
    AGENT_BROWSER_ARGS=--no-sandbox,--disable-dev-shm-usage \\
    PLAYWRIGHT_DOWNLOAD_CONNECTION_TIMEOUT=1800000
RUN npm install -g --no-audit --no-fund "agent-browser@0.27.0" \\
    && agent-browser --version \\
    && for pw_try in 1 2 3 4 5; do \\
        HOME=/opt/kortix/home npx -y playwright@1.60.0 install --with-deps chromium && break; \\
        echo "playwright chromium install attempt $pw_try failed, retrying..."; \\
        sleep $((pw_try*10)); \\
    done \\
    && rm -rf /var/lib/apt/lists/* \\
    && pw_chrome="$(find /opt/pw-browsers -type f -path '*chrome-linux*/chrome' | head -n1)" \\
    && test -n "$pw_chrome" \\
    && ln -sf "$pw_chrome" /usr/local/bin/chromium \\
    && mkdir -p /opt/kortix/home/.agent-browser/browsers \\
    && ln -sf "$(dirname "$pw_chrome")" /opt/kortix/home/.agent-browser/browsers/chrome-linux64 \\
    && /usr/local/bin/chromium --version \\
    && env -u AGENT_BROWSER_EXECUTABLE_PATH HOME=/opt/kortix/home agent-browser doctor 2>&1 | grep -qE 'pass.+chrome-linux64/chrome'

RUN npm install -g --no-audit --no-fund "opencode-ai@1.17.11" \\
    && command -v opencode \\
    && opencode --version

RUN set +e; \\
    export HOME=/opt/kortix/home \\
        XDG_DATA_HOME=/opt/kortix/home/.local/share \\
        XDG_CONFIG_HOME=/opt/kortix/home/.config \\
        XDG_CACHE_HOME=/opt/kortix/home/.cache; \\
    mkdir -p "$XDG_DATA_HOME" "$XDG_CONFIG_HOME" "$XDG_CACHE_HOME"; \\
    opencode serve --port 4096 --hostname 127.0.0.1 >/tmp/oc-bake.log 2>&1 & oc_pid=$!; \\
    for i in $(seq 1 180); do \\
        curl -s -o /dev/null -m 2 http://127.0.0.1:4096/ && break; \\
        kill -0 "$oc_pid" 2>/dev/null || break; \\
        sleep 1; \\
    done; \\
    sleep 3; \\
    kill "$oc_pid" 2>/dev/null; wait "$oc_pid" 2>/dev/null; \\
    echo "=== migration-bake: opencode data dir ==="; ls -laR "$XDG_DATA_HOME/opencode" 2>/dev/null | head -40; \\
    echo "=== migration-bake: opencode log tail ==="; tail -25 /tmp/oc-bake.log; \\
    rm -f /tmp/oc-bake.log; true

RUN curl -fsSL https://bun.com/install | bash \\
    && install -m 755 /root/.bun/bin/bun /usr/local/bin/bun \\
    && bun --version

RUN mkdir -p /opt/kortix/home/.bun/install/cache /opt/kortix/opencode-config-deps \\
    && cd /opt/kortix/opencode-config-deps \\
    && printf '{"name":"kortix-opencode-config","private":true,"dependencies":{"@mendable/firecrawl-js":"^4.25.1","@opencode-ai/plugin":"1.17.11","@tavily/core":"^0.7.3","replicate":"^1.4.0"},"overrides":{"axios":"1.16.0","form-data":"4.0.6"}}' > package.json \\
    && HOME=/opt/kortix/home BUN_INSTALL_CACHE_DIR=/opt/kortix/home/.bun/install/cache bun install

RUN cd /opt/kortix/opencode-config-deps \\
    && HOME=/opt/kortix/home bun build node_modules/axios/lib/utils.js node_modules/form-data/lib/form_data.js --target=bun --outdir=/tmp/opencode-deps-bundle-check \\
    && rm -rf /tmp/opencode-deps-bundle-check \\
    && echo "opencode-config-deps: baked tree bundles cleanly"

COPY kortix-opencode-config/ /opt/kortix/warm-config/.kortix/opencode/
RUN cd /opt/kortix/warm-config/.kortix/opencode \\
    && rm -rf node_modules \\
    && ln -s /opt/kortix/opencode-config-deps/node_modules node_modules \\
    && HOME=/opt/kortix/home bun build tools/*.ts --target=bun --outdir=/tmp/opencode-tools-bundle-check \\
    && rm -rf /tmp/opencode-tools-bundle-check \\
    && echo "opencode-config-deps: starter tool files bundle cleanly"

RUN set +e; \\
    export HOME=/opt/kortix/home \\
        XDG_DATA_HOME=/opt/kortix/home/.local/share \\
        XDG_CONFIG_HOME=/opt/kortix/home/.config \\
        XDG_CACHE_HOME=/opt/kortix/home/.cache \\
        BUN_INSTALL_CACHE_DIR=/opt/kortix/home/.bun/install/cache; \\
    mkdir -p /workspace/.kortix; \\
    staged_starter_config=0; \\
    [ -d /workspace/.kortix/opencode ] || { cp -a /opt/kortix/warm-config/.kortix/opencode /workspace/.kortix/opencode && staged_starter_config=1; }; \\
    rm -rf /workspace/.kortix/opencode/node_modules; \\
    ln -s /opt/kortix/opencode-config-deps/node_modules /workspace/.kortix/opencode/node_modules; \\
    export OPENCODE_CONFIG_DIR=/workspace/.kortix/opencode; \\
    cd /workspace; \\
    opencode serve --port 4096 --hostname 127.0.0.1 >/tmp/oc-warm.log 2>&1 & oc_pid=$!; \\
    ready=0; \\
    for i in $(seq 1 300); do \\
        code=$(curl -s -o /dev/null -w '%{http_code}' -m 3 "http://127.0.0.1:4096/session?directory=/workspace" 2>/dev/null); \\
        case "$code" in 200|204|301|302) ready=1; break;; esac; \\
        kill -0 "$oc_pid" 2>/dev/null || break; \\
        sleep 1; \\
    done; \\
    echo "=== instance-warm: ready=$ready ==="; \\
    kill "$oc_pid" 2>/dev/null; wait "$oc_pid" 2>/dev/null; \\
    [ "$staged_starter_config" = 1 ] && rm -rf /workspace/.kortix/opencode; rmdir /workspace/.kortix 2>/dev/null; \\
    rm -rf /opt/kortix/warm-config; \\
    echo "=== instance-warm: opencode log tail ==="; tail -20 /tmp/oc-warm.log; \\
    rm -f /tmp/oc-warm.log; true

COPY kortix-agent.gz /tmp/kortix-agent.gz
COPY kortix.gz /tmp/kortix.gz
COPY kortix-entrypoint /usr/local/bin/kortix-entrypoint
COPY kortix-slack-cli/ /opt/kortix/apps/sandbox/slack-cli/
COPY kortix-executor-sdk/ /opt/kortix/packages/executor-sdk/
COPY kortix-llm-catalog.json /opt/kortix/llm-catalog.json
COPY scaffold.git /opt/kortix/scaffold.git
RUN gunzip -c /tmp/kortix-agent.gz > /usr/local/bin/kortix-agent \\
    && gunzip -c /tmp/kortix.gz > /usr/local/bin/kortix \\
    && rm /tmp/kortix-agent.gz /tmp/kortix.gz \\
    && chmod +x /usr/local/bin/kortix-agent /usr/local/bin/kortix /usr/local/bin/kortix-entrypoint \\
        /opt/kortix/apps/sandbox/slack-cli/install-shims.sh \\
    && bash /opt/kortix/apps/sandbox/slack-cli/install-shims.sh /opt/kortix/apps/sandbox/slack-cli \\
    && kortix --version

ENV KORTIX_WORKSPACE=/workspace
RUN mkdir -p /workspace /opt/kortix/home /ephemeral/kortix-master/opencode
WORKDIR /workspace
EXPOSE 8000
ENTRYPOINT ["/usr/local/bin/kortix-entrypoint"]
"
`;

exports[`rendered layer (golden) per-project cold warm (warmRepo) 1`] = `
"# syntax=docker/dockerfile:1.7
# Kortix platform default sandbox base.
# Sessions clone the project workspace at boot — nothing project-specific
# is baked in here. Customize via \`sandbox.templates\` in kortix.yaml.
FROM ubuntu:24.04

WORKDIR /workspace

# ─── Kortix runtime layer (auto-injected) ──────────────────────────
# Everything below is added by the Kortix snapshot builder. Do not
# edit by hand — your project Dockerfile above is preserved verbatim.

USER root
ENV DEBIAN_FRONTEND=noninteractive
RUN base_py="$(command -v python3 || true)" \\
    && apt-get update \\
    && apt-get install -y --no-install-recommends \\
        ca-certificates curl git gzip nodejs npm unzip tmux iproute2 iputils-arping \\
        build-essential ffmpeg fonts-dejavu fonts-liberation fonts-noto fonts-noto-cjk \\
        latexmk libreoffice pandoc pkg-config poppler-utils qpdf tesseract-ocr \\
        python3 python3-dev python3-pip python3-venv \\
        texlive-bibtex-extra texlive-fonts-recommended texlive-latex-base \\
        texlive-latex-extra texlive-latex-recommended \\
    && rm -rf /var/lib/apt/lists/* \\
    && "\${base_py:-python3}" -m venv --system-site-packages /opt/kortix/pyfloor \\
    && /opt/kortix/pyfloor/bin/python -c 'import sys; print("pyfloor interpreter:", sys.version)'

ENV PATH=/opt/kortix/pyfloor/bin:$PATH

# Starter skill Python package floor (document/data/PDF/presentation helpers).
# Installed INTO the venv via its own pip, which cannot touch a dpkg-owned
# package no matter what the resolver picks.
RUN /opt/kortix/pyfloor/bin/pip install --no-cache-dir \\
        "beautifulsoup4>=4.12" \\
        "lxml>=5" \\
        "markdownify>=0.13" \\
        "markitdown[pptx]>=0.1.0" \\
        "matplotlib>=3.8" \\
        "numpy>=1.26" \\
        "openpyxl>=3.1" \\
        "pandas>=2.2" \\
        "pdf2docx>=0.5" \\
        "pdf2image>=1.17" \\
        "pdfplumber>=0.11" \\
        "pillow>=10" \\
        "playwright>=1.58" \\
        "plotly>=5.22" \\
        "pymupdf>=1.24" \\
        "pypdf>=4" \\
        "pypdfium2>=4.30" \\
        "pytesseract>=0.3" \\
        "python-docx>=1.1" \\
        "python-pptx>=1.0" \\
        "reportlab>=4.2" \\
        "requests>=2.32" \\
        "scikit-learn>=1.4" \\
        "scipy>=1.12" \\
        "seaborn>=0.13" \\
        "youtube-transcript-api>=0.6" \\
    && /opt/kortix/pyfloor/bin/python -c 'import importlib; [importlib.import_module(m) for m in ["bs4", "lxml", "markitdown", "matplotlib", "numpy", "openpyxl", "pandas", "pdf2docx", "pdf2image", "pdfplumber", "PIL", "playwright", "plotly", "fitz", "pypdf", "pypdfium2", "pytesseract", "docx", "pptx", "reportlab", "requests", "sklearn", "scipy", "seaborn", "youtube_transcript_api"]]; print("starter Python package floor OK")'

ENV PLAYWRIGHT_BROWSERS_PATH=/opt/pw-browsers \\
    AGENT_BROWSER_EXECUTABLE_PATH=/usr/local/bin/chromium \\
    AGENT_BROWSER_ARGS=--no-sandbox,--disable-dev-shm-usage \\
    PLAYWRIGHT_DOWNLOAD_CONNECTION_TIMEOUT=1800000
RUN npm install -g --no-audit --no-fund "agent-browser@0.27.0" \\
    && agent-browser --version \\
    && for pw_try in 1 2 3 4 5; do \\
        HOME=/opt/kortix/home npx -y playwright@1.60.0 install --with-deps chromium && break; \\
        echo "playwright chromium install attempt $pw_try failed, retrying..."; \\
        sleep $((pw_try*10)); \\
    done \\
    && rm -rf /var/lib/apt/lists/* \\
    && pw_chrome="$(find /opt/pw-browsers -type f -path '*chrome-linux*/chrome' | head -n1)" \\
    && test -n "$pw_chrome" \\
    && ln -sf "$pw_chrome" /usr/local/bin/chromium \\
    && mkdir -p /opt/kortix/home/.agent-browser/browsers \\
    && ln -sf "$(dirname "$pw_chrome")" /opt/kortix/home/.agent-browser/browsers/chrome-linux64 \\
    && /usr/local/bin/chromium --version \\
    && env -u AGENT_BROWSER_EXECUTABLE_PATH HOME=/opt/kortix/home agent-browser doctor 2>&1 | grep -qE 'pass.+chrome-linux64/chrome'

RUN npm install -g --no-audit --no-fund "opencode-ai@1.17.11" \\
    && command -v opencode \\
    && opencode --version

RUN set +e; \\
    export HOME=/opt/kortix/home \\
        XDG_DATA_HOME=/opt/kortix/home/.local/share \\
        XDG_CONFIG_HOME=/opt/kortix/home/.config \\
        XDG_CACHE_HOME=/opt/kortix/home/.cache; \\
    mkdir -p "$XDG_DATA_HOME" "$XDG_CONFIG_HOME" "$XDG_CACHE_HOME"; \\
    opencode serve --port 4096 --hostname 127.0.0.1 >/tmp/oc-bake.log 2>&1 & oc_pid=$!; \\
    for i in $(seq 1 180); do \\
        curl -s -o /dev/null -m 2 http://127.0.0.1:4096/ && break; \\
        kill -0 "$oc_pid" 2>/dev/null || break; \\
        sleep 1; \\
    done; \\
    sleep 3; \\
    kill "$oc_pid" 2>/dev/null; wait "$oc_pid" 2>/dev/null; \\
    echo "=== migration-bake: opencode data dir ==="; ls -laR "$XDG_DATA_HOME/opencode" 2>/dev/null | head -40; \\
    echo "=== migration-bake: opencode log tail ==="; tail -25 /tmp/oc-bake.log; \\
    rm -f /tmp/oc-bake.log; true

RUN curl -fsSL https://bun.com/install | bash \\
    && install -m 755 /root/.bun/bin/bun /usr/local/bin/bun \\
    && bun --version

RUN mkdir -p /opt/kortix/home/.bun/install/cache /opt/kortix/opencode-config-deps \\
    && cd /opt/kortix/opencode-config-deps \\
    && printf '{"name":"kortix-opencode-config","private":true,"dependencies":{"@mendable/firecrawl-js":"^4.25.1","@opencode-ai/plugin":"1.17.11","@tavily/core":"^0.7.3","replicate":"^1.4.0"},"overrides":{"axios":"1.16.0","form-data":"4.0.6"}}' > package.json \\
    && HOME=/opt/kortix/home BUN_INSTALL_CACHE_DIR=/opt/kortix/home/.bun/install/cache bun install

RUN cd /opt/kortix/opencode-config-deps \\
    && HOME=/opt/kortix/home bun build node_modules/axios/lib/utils.js node_modules/form-data/lib/form_data.js --target=bun --outdir=/tmp/opencode-deps-bundle-check \\
    && rm -rf /tmp/opencode-deps-bundle-check \\
    && echo "opencode-config-deps: baked tree bundles cleanly"


# ─── Per-project COLD warm: bake repo checkout into /workspace ──────
RUN cd / \\
    && rm -rf /tmp/kortix-warm-repo && mkdir -p /tmp/kortix-warm-repo /workspace \\
    && git -c http.extraHeader='Authorization: Bearer redacted' clone --depth 1 --branch 'main' 'https://git.example.com/acme/app.git' /tmp/kortix-warm-repo \\
    && find /workspace -mindepth 1 -maxdepth 1 -exec rm -rf {} + \\
    && (shopt -s dotglob 2>/dev/null || true) && cp -a /tmp/kortix-warm-repo/. /workspace/ \\
    && rm -rf /tmp/kortix-warm-repo \\
    && git -C /workspace remote set-url origin 'https://kortix.example.com/v1/git/proj.git' \\
    && echo "warm-repo: baked $(git -C /workspace rev-parse HEAD) on main"

COPY kortix-opencode-config/ /opt/kortix/warm-config/.kortix/opencode/
RUN cd /opt/kortix/warm-config/.kortix/opencode \\
    && rm -rf node_modules \\
    && ln -s /opt/kortix/opencode-config-deps/node_modules node_modules \\
    && HOME=/opt/kortix/home bun build tools/*.ts --target=bun --outdir=/tmp/opencode-tools-bundle-check \\
    && rm -rf /tmp/opencode-tools-bundle-check \\
    && echo "opencode-config-deps: starter tool files bundle cleanly"

RUN set +e; \\
    export HOME=/opt/kortix/home \\
        XDG_DATA_HOME=/opt/kortix/home/.local/share \\
        XDG_CONFIG_HOME=/opt/kortix/home/.config \\
        XDG_CACHE_HOME=/opt/kortix/home/.cache \\
        BUN_INSTALL_CACHE_DIR=/opt/kortix/home/.bun/install/cache; \\
    mkdir -p /workspace/.kortix; \\
    staged_starter_config=0; \\
    [ -d /workspace/.kortix/opencode ] || { cp -a /opt/kortix/warm-config/.kortix/opencode /workspace/.kortix/opencode && staged_starter_config=1; }; \\
    rm -rf /workspace/.kortix/opencode/node_modules; \\
    ln -s /opt/kortix/opencode-config-deps/node_modules /workspace/.kortix/opencode/node_modules; \\
    export OPENCODE_CONFIG_DIR=/workspace/.kortix/opencode; \\
    cd /workspace; \\
    opencode serve --port 4096 --hostname 127.0.0.1 >/tmp/oc-warm.log 2>&1 & oc_pid=$!; \\
    ready=0; \\
    for i in $(seq 1 300); do \\
        code=$(curl -s -o /dev/null -w '%{http_code}' -m 3 "http://127.0.0.1:4096/session?directory=/workspace" 2>/dev/null); \\
        case "$code" in 200|204|301|302) ready=1; break;; esac; \\
        kill -0 "$oc_pid" 2>/dev/null || break; \\
        sleep 1; \\
    done; \\
    echo "=== instance-warm: ready=$ready ==="; \\
    kill "$oc_pid" 2>/dev/null; wait "$oc_pid" 2>/dev/null; \\
    echo "warm-repo: keeping baked /workspace checkout"; \\
    rm -rf /opt/kortix/warm-config; \\
    echo "=== instance-warm: opencode log tail ==="; tail -20 /tmp/oc-warm.log; \\
    rm -f /tmp/oc-warm.log; true

COPY kortix-agent.gz /tmp/kortix-agent.gz
COPY kortix.gz /tmp/kortix.gz
COPY kortix-entrypoint /usr/local/bin/kortix-entrypoint
COPY kortix-slack-cli/ /opt/kortix/apps/sandbox/slack-cli/
COPY kortix-executor-sdk/ /opt/kortix/packages/executor-sdk/
COPY kortix-llm-catalog.json /opt/kortix/llm-catalog.json
COPY scaffold.git /opt/kortix/scaffold.git
RUN gunzip -c /tmp/kortix-agent.gz > /usr/local/bin/kortix-agent \\
    && gunzip -c /tmp/kortix.gz > /usr/local/bin/kortix \\
    && rm /tmp/kortix-agent.gz /tmp/kortix.gz \\
    && chmod +x /usr/local/bin/kortix-agent /usr/local/bin/kortix /usr/local/bin/kortix-entrypoint \\
        /opt/kortix/apps/sandbox/slack-cli/install-shims.sh \\
    && bash /opt/kortix/apps/sandbox/slack-cli/install-shims.sh /opt/kortix/apps/sandbox/slack-cli \\
    && kortix --version

ENV KORTIX_WORKSPACE=/workspace
RUN mkdir -p /workspace /opt/kortix/home /ephemeral/kortix-master/opencode
WORKDIR /workspace
EXPOSE 8000
ENTRYPOINT ["/usr/local/bin/kortix-entrypoint"]
"
`;

exports[`buildPerProjectWarmFromBaseDockerfile (FROM-base fast path) golden 1`] = `
"FROM registry.daytona.internal/kortix-default-abc123:latest

# ─── Per-project COLD warm (FROM-base fast path, auto-injected) ─────
# Everything above this line is INHERITED from the already-built default
# runtime image (apt/pip/opencode/bun/agent-browser + Chromium are already
# baked in) — nothing below re-installs any of it. This is what makes the
# Chromium install a guaranteed inherit instead of an opportunistic
# build-cache hit. Do not add toolchain RUNs here — they belong in
# kortixToolchainLayer, which this stage deliberately skips.

USER root

# ─── Per-project COLD warm: bake repo checkout into /workspace ──────
RUN cd / \\
    && rm -rf /tmp/kortix-warm-repo && mkdir -p /tmp/kortix-warm-repo /workspace \\
    && git -c http.extraHeader='Authorization: Bearer redacted' clone --depth 1 --branch 'main' 'https://git.example.com/acme/app.git' /tmp/kortix-warm-repo \\
    && find /workspace -mindepth 1 -maxdepth 1 -exec rm -rf {} + \\
    && (shopt -s dotglob 2>/dev/null || true) && cp -a /tmp/kortix-warm-repo/. /workspace/ \\
    && rm -rf /tmp/kortix-warm-repo \\
    && git -C /workspace remote set-url origin 'https://kortix.example.com/v1/git/proj.git' \\
    && echo "warm-repo: baked $(git -C /workspace rev-parse HEAD) on main"

COPY kortix-opencode-config/ /opt/kortix/warm-config/.kortix/opencode/
RUN cd /opt/kortix/warm-config/.kortix/opencode \\
    && rm -rf node_modules \\
    && ln -s /opt/kortix/opencode-config-deps/node_modules node_modules \\
    && HOME=/opt/kortix/home bun build tools/*.ts --target=bun --outdir=/tmp/opencode-tools-bundle-check \\
    && rm -rf /tmp/opencode-tools-bundle-check \\
    && echo "opencode-config-deps: starter tool files bundle cleanly"

RUN set +e; \\
    export HOME=/opt/kortix/home \\
        XDG_DATA_HOME=/opt/kortix/home/.local/share \\
        XDG_CONFIG_HOME=/opt/kortix/home/.config \\
        XDG_CACHE_HOME=/opt/kortix/home/.cache \\
        BUN_INSTALL_CACHE_DIR=/opt/kortix/home/.bun/install/cache; \\
    mkdir -p /workspace/.kortix; \\
    staged_starter_config=0; \\
    [ -d /workspace/.kortix/opencode ] || { cp -a /opt/kortix/warm-config/.kortix/opencode /workspace/.kortix/opencode && staged_starter_config=1; }; \\
    rm -rf /workspace/.kortix/opencode/node_modules; \\
    ln -s /opt/kortix/opencode-config-deps/node_modules /workspace/.kortix/opencode/node_modules; \\
    export OPENCODE_CONFIG_DIR=/workspace/.kortix/opencode; \\
    cd /workspace; \\
    opencode serve --port 4096 --hostname 127.0.0.1 >/tmp/oc-warm.log 2>&1 & oc_pid=$!; \\
    ready=0; \\
    for i in $(seq 1 300); do \\
        code=$(curl -s -o /dev/null -w '%{http_code}' -m 3 "http://127.0.0.1:4096/session?directory=/workspace" 2>/dev/null); \\
        case "$code" in 200|204|301|302) ready=1; break;; esac; \\
        kill -0 "$oc_pid" 2>/dev/null || break; \\
        sleep 1; \\
    done; \\
    echo "=== instance-warm: ready=$ready ==="; \\
    kill "$oc_pid" 2>/dev/null; wait "$oc_pid" 2>/dev/null; \\
    echo "warm-repo: keeping baked /workspace checkout"; \\
    rm -rf /opt/kortix/warm-config; \\
    echo "=== instance-warm: opencode log tail ==="; tail -20 /tmp/oc-warm.log; \\
    rm -f /tmp/oc-warm.log; true

"
`;
